# keycloak-realm-builder

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  RELEASE.md  REUSE.toml  docker-compose.keycloak.test.yml  docker-compose.yaml  entrypoint.sh  filters.py  gen-config.sh  keycloak-realm.json.j2  keycloak.env  keycloak.json.j2  keycloak.tf  main.py  mypy.ini  populate-template.sh  pyproject.toml  requirements.txt  run.sh
.reuse/: dep5
integration/: .gitignore  Dockerfile  main.tf  run.sh
tests/: test_settings.py  test_user_model.py
